# gauss

./: CMakeLists.txt  README.md  makefile
include/: romberg.h  simps.h
src/: TRAPZ.cpp  TRAPZ.h  gauss.h  main.cpp  reimann.cpp  reimann.h  riemann.cpp  riemann.h  romberg.cpp  simps.cpp
